Fix HTML structure and content errors

--- a/8.html
+++ b/8.html
@@ -12,9 +12,9 @@
     <p><b>Mô hình đâof tạo của chúng tôi được chia thành 3 giai đoạn chính:</b></p>
     <img src="./mohinhdaotao.jpg"/>
     <h2>1. Trước buổi Học</h2>
-    <p>Giai đoạn <mark>chuẩn bịbị, nghiên cứu </mark>và lập kế hoạch:</p>
+    <p>Giai đoạn <mark>chuẩn bị, nghiên cứu </mark>và lập kế hoạch:</p>
     <ul>
-        <li><b>Tài liệu đọc trước (SRS)</b> - Học viên nghiên cứu tài liệu được cung cấp</li>
+        <li><b>Tài liệu đọc trước (<abbr title="">SRS</abbr>)</b> - Học viên nghiên cứu tài liệu được cung cấp</li>
         <li><b>Làm việc nhóm</b> - Tô chức nhóm và <u>Phân công nhiệm vụ</u></li>
         <li><b>Phân tích</b> - Phân tích vấn đề và yêu cầu</li>
         <li><b>Thiết kế</b> - Thiết kế giải pháp và kế hoạch thực hiện</li>
@@ -25,7 +25,7 @@
     <ul>
         <li><b>Kiểm tra thực hành</b> - Đánh giá kiến thức qua bài test thực tế</li>
         <li><b>Trình bày giải pháp</b> - Học viên <u>present ý tưởng </u>và san sản phẩm</li>
-        <li><b>Hỏi đáp (Q&A)</b> - Trao đổi, thảo luận và giải đáp thắc mắc</li>
+        <li><b>Hỏi đáp (<abbr title="">Q&A</abbr>)</b> - Trao đổi, thảo luận và giải đáp thắc mắc</li>
         <li><b>Thực hành và triển khai</b> - Hoàn thiện sản phẩm theo <a href="https://mail.google.com/mail/u/0/#sent">Phản hồi</a></li>
     </ul>
     <h2>3. Sau Buổi Học</h2>
