--- a/7.html
+++ b/7.html
@@ -7,18 +7,23 @@
 </head>
 <body>
     <h1><b>Chào mừng đến với Thế giới Công Nghệ</b></h1>
-    <p>Nơi cập nhật nhưunxg xu hướng công nghệ mới nhất!</p>
-    <h2><b>Về Chúng TôiTôi</b></h2>
+    <p>Nơi cập nhật những xu hướng công nghệ mới nhất!</p>
+    <h2><b>Về Chúng Tôi</b></h2>
     <p>Chúng tôi là một nhóm <mark>đam mê công nghệ</mark>, khám phá nhưunxg đổi mới trong AI, Blockchain, và nhiều hơn thế</p>
     <h2><b>Dịch Vụ Chính</b></h2>
+
     <ul>
         <li><u>Phát triển phầm mềm</u> - Giải pháp tối ưu cho doanh nghiệp</li>
         <li><mark>Trí tuệ nhân tạo</mark> - Nâng cao hiệu suất và sáng tạo</li>
         <li><abbr title="">IoT</abbr> - Kết nối thế giới thông minh</li>
     </ul>
+
     <h2><b>Tiêu Điểm Công Nghệ</b></h2>
-    <img src="./img_B7.webp" alt="khám phá công nghệ hiện đại giúp thay đổi tương lai"/>
-    <figcaption>Khám phá công nghệ hiện đại giúp thay đổi tương lai.</figcaption>
+    <figure>
+        <img src="./img_B7.webp" alt="khám phá công nghệ hiện đại giúp thay đổi tương lai"/>
+        <figcaption>Khám phá công nghệ hiện đại giúp thay đổi tương lai.</figcaption>
+    </figure>
+
     <h2><b>Thông Tin Hữu Ích</b></h2>
     <p>Định luật nổi tiếng của vật lý: <b>E = mc<sup>2</sup></b></p>
     <p>Công thức hóa học phổ biến: H<sub>2</sub>O - Nguồn sống của con người</p>
